# AssetManagementDB

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: db7843fc09f2_initial_tables.py  dd642ccf0a62_initial_schema.py  e40298fabfa0_add_responsible_person_and_asset_.py
app/api/: asset_movements.py  assets.py  categories.py  department.py  depreciations.py  excel.py  responsible_persons.py
app/db/: database.py
app/models/: __init__.py  asset.py  asset_movement.py  category.py  department.py  depreciation.py  operation_type.py  responsible_person.py
app/schemas/: asset.py  asset_movement.py  category.py  department.py  depreciation.py  responsible_person.py
app/services/: asset_movement_service.py  asset_service.py  category_service.py  department_service.py  depreciation_service.py  responsible_person_service.py
app/utils/: excel_manager.py
config/: cli.py  settings.py
