[project]
name = "FixedAssetsManagement"
version = "0.0.1"
description = ""
authors = [{ name = "amnesiawhobit", email = "ai28092005@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = ["pyrofork (>=2.3.61,<3.0.0)", "sqlalchemy (>=2.0)", "alembic (>=1.15.2,<2.0.0)", "python-dotenv (>=1.1.0,<2.0.0)", "pydantic (>=2.11.3,<3.0.0)", "fastapi (>=0.115.12,<0.116.0)", "uvicorn[standard] (>=0.34.2,<0.35.0)", "pytest (>=8.3.5,<9.0.0)", "pandas (>=2.2.3,<3.0.0)", "openpyxl (>=3.1.5,<4.0.0)", "ruff (>=0.11.6,<0.12.0)", "isort (>=6.0.1,<7.0.0)", "pylint (>=3.3.6,<4.0.0)", "python-multipart (>=0.0.20,<0.0.21)", "jinja2 (>=3.1.6,<4.0.0)"]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
start = "uvicorn:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
